# SatcArqInformacaoApacheSpark

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
delta-lake/: project.py
delta-lake/.ipynb_checkpoints/: project-checkpoint.ipynb  project-checkpoint.py
docs/: delta-lake.md  iceberg.md  index.md
iceberg/: index.html  project.ipynb  project_iceberg.py
iceberg/.ipynb_checkpoints/: project_iceberg-checkpoint.py
site/: 404.html  index.html
site/delta-lake/: index.html
site/iceberg/: index.html
site/search/: search_index.json
spark-warehouse/iceberg/carro_iceberg/data/: .00000-13-95f9d3ef-a913-44f1-beff-dcc1ae84ce22-0-00001.parquet.crc  .00000-17-92a37254-75dd-4bdc-8552-bd3101cb54ae-0-00001.parquet.crc  .00000-8-5fcef071-d727-4026-8c29-ddefb85bfcd9-0-00001.parquet.crc  00000-13-95f9d3ef-a913-44f1-beff-dcc1ae84ce22-0-00001.parquet  00000-17-92a37254-75dd-4bdc-8552-bd3101cb54ae-0-00001.parquet  00000-8-5fcef071-d727-4026-8c29-ddefb85bfcd9-0-00001.parquet
spark-warehouse/iceberg/carro_iceberg/metadata/: .13928557-70ec-4369-8bad-c4cfaf75ef06-m0.avro.crc  .13928557-70ec-4369-8bad-c4cfaf75ef06-m1.avro.crc  .3815d1a1-7535-4785-a13d-f09de6321648-m0.avro.crc  .a74450e3-bbd0-454b-b9af-c0af117c4b5d-m0.avro.crc  .a74450e3-bbd0-454b-b9af-c0af117c4b5d-m1.avro.crc  .be325d54-29b8-4f32-8635-ab7c06700678-m0.avro.crc  .be325d54-29b8-4f32-8635-ab7c06700678-m1.avro.crc  .c3fbb597-95f5-4f51-ae08-3091cf7682c0-m0.avro.crc  .snap-3332049793416511244-1-13928557-70ec-4369-8bad-c4cfaf75ef06.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  (+29 more)
(+52 files in other folders)
